slow controls dashboard: added xy plot widget

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -491,7 +491,7 @@
 
 
 			//=====================================================================================
-			var PHOEBUS_MAP = {"textupdate": 0, "table": 1, "meter": 2, "stripchart": 3, "thermometer": 4, "siren": 5, "label": 6, "led": 7, "picture": 8, "root": 9, "2dstoplight": 10};
+			var PHOEBUS_MAP = {"textupdate": 0, "table": 1, "meter": 2, "stripchart": 3, "xychart": 4, "thermometer": 5, "siren": 6, "label": 7, "led": 8, "picture": 9, "2dstoplight": 10, "root": 11};
 			function loadPhoebusPageReqHandler(req)
 			{
 				Debug.log("loadPhoebusPageReqHandler() was called. Req: " + req.responseText);
