--- a/WebGUI/html/widgets/picture.html
+++ b/WebGUI/html/widgets/picture.html
@@ -18,7 +18,7 @@
 
 		<script>
 
-			var parameters_ = {"class": "", "upload_image": "picture-icon.png", "inner_map_html": "https://www.image-map.net/"};
+			var parameters_ = {"class": "", "inner_map_html": "", "upload_image": "picture-icon.png"};
 			var IMAGE_PATH = "/WebPath/UserWebPath/ControlsDashboardData/private/";
 			//functions:
 			//init()
