Checkpoint  in  state machine and group comment fixes, also fixed fixing of repos

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -10399,7 +10399,7 @@
 							treeEditingNodeParentIdString_.split('-')[1], false);
 						pel.innerHTML = "";
 
-						//check if parent is now empty in treeViewHandler()
+						//check if parent is now empty in the handler treeViewHandler()
 						toggleTreeChildren(treeEditingNodeParentIdString_.split('-')[0],
 							treeEditingNodeParentIdString_.split('-')[1], true);
 
