Fixed strange bug: div.style.width no longer works (need instad div.setAttribute...)

--- a/WebGUI/html/Visualization-Dario.html
+++ b/WebGUI/html/Visualization-Dario.html
@@ -1,12 +1,32 @@
 <!DOCTYPE HTML>
-<!-- ---------------------------------------
- Author: D. menasce
- 
------------------------------------------ -->
+<!-- -----------------------------------------------------------------------------
+ * complexLayout.js:   the javascript code to instantiate a root objects         *
+ *                     navigator in the otsdaq framework                         *
+ *                                                                               *
+ * Copyright (C) 2019                                                            *
+ *                                                                               *
+ * Authors: Dario Menasce                                                        *
+ *                                                                               *
+ * INFN: Piazza della Scienza 3, Edificio U2, Milano, Italy 20126                *
+ *                                                                               *
+ * This program is free software: you can redistribute it and/or modify          *
+ * it under the terms of the GNU General Public License as published by          *
+ * the Free Software Foundation, either version 3 of the License, or             *
+ * (at your option) any later version.                                           *
+ *                                                                               *
+ * This program is distributed in the hope that it will be useful,               *
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of                *
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                 *
+ * GNU General Public License for more details.                                  *
+ *                                                                               *
+ * You should have received a copy of the GNU General Public License             *
+ * along with this program.  If not, see http://www.gnu.org/licenses/.           *
+------------------------------------------------------------------------------ -->
+
 <html lang="en"> 
 
- <!-- ------------------------------------------------------------------------------ --> 	
  <head>
+
   <title>Visualization</title>
   <style type="text/css">		  
    .square {
@@ -18,31 +38,28 @@
   </style>
   
   <link   href="/WebPath/css/fonts.css?family=Donegal+One"                                      type="text/css"        rel="stylesheet"/>
-  <link   href="/WebPath/ext-6.2.0/build/examples/classic/shared/examples.css"                 type="text/css"        rel="stylesheet"/>
+  <link   href="/WebPath/ext-6.2.0/build/examples/classic/shared/examples.css"                  type="text/css"        rel="stylesheet"/>
   <link   href="../css/HistogramViewer.css"                                                     type="text/css"        rel="stylesheet"/>
  
-  <script  src="/WebPath/ext-6.2.0/build/examples/classic/shared/include-ext.js?theme=classic" type="text/javascript"		        ></script>
+  <script  src="/WebPath/ext-6.2.0/build/examples/classic/shared/include-ext.js?theme=classic" type="text/javascript"  ></script>
 
   <!-- W A R N I N G: The JSROOT stuff must precede the Extjs one! -->
-  <script  src="../js/Debug.js"   			                                        type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot.js"   			                        type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/ViewerRootHud.js"   	                type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootCore.js?2d&hierarchy" type="text/javascript"                  ></script> 
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/d3.min.js"                  type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.js"           type="text/javascript"                  ></script>
-  <script  src="../js/themeSelector.js"   			                                type="text/javascript"                  ></script>
+  <script  src="../js/Debug.js"   			                                        type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot.js"   			                        type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/ViewerRootHud.js"   	                type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootCore.js?2d&hierarchy" type="text/javascript" ></script> 
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/d3.min.js"                  type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.js"           type="text/javascript" ></script>
+  <script  src="../js/themeSelector.js"   			                                type="text/javascript" ></script>
 
-  <script  src="../js/DesktopContent.js"   			                                type="text/javascript"                  ></script>
-  <script  src="../js/HistogramViewer.js"   			                                type="text/javascript"                  ></script>
+  <script  src="../js/DesktopContent.js"   			                                type="text/javascript" ></script>
+  <script  src="../js/HistogramViewer.js"   			                                type="text/javascript" ></script>
+
  </head>
 
  <!-- ------------------------------------------------------------------------------ --> 	
  <body>
- <!--
-    <div  id="histogramDiv" style="position:absolute; left:205px; top:28px; bottom:1px; right:1px">
-     <div id="histogram1"   style="position:absolute; left:1px; top:1px; bottom:1px; right:1px"></div>
-    </div>  
---> 
+ CUCU
  </body>
 
 </html>
