--- a/WebGUI/html/Visualization-complexLayout.html
+++ b/WebGUI/html/Visualization-complexLayout.html
@@ -1,3 +1,28 @@
+<!DOCTYPE HTML>
+<!-- -----------------------------------------------------------------------------
+ * complexLayout.js:   the javascript code to instantiate a root objects         *
+ *                     navigator in the otsdaq framework                         *
+ *                                                                               *
+ * Copyright (C) 2019                                                            *
+ *                                                                               *
+ * Authors: Dario Menasce                                                        *
+ *                                                                               *
+ * INFN: Piazza della Scienza 3, Edificio U2, Milano, Italy 20126                *
+ *                                                                               *
+ * This program is free software: you can redistribute it and/or modify          *
+ * it under the terms of the GNU General Public License as published by          *
+ * the Free Software Foundation, either version 3 of the License, or             *
+ * (at your option) any later version.                                           *
+ *                                                                               *
+ * This program is distributed in the hope that it will be useful,               *
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of                *
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                 *
+ * GNU General Public License for more details.                                  *
+ *                                                                               *
+ * You should have received a copy of the GNU General Public License             *
+ * along with this program.  If not, see http://www.gnu.org/licenses/.           *
+-----------------------------------------------------------------------------  -->
+
 <html>
  <head>
   <title>Visualization</title>
@@ -6,26 +31,26 @@
   <link   href="/WebPath/extjsLib-6/build/examples/classic/shared/examples.css"                 type="text/css"        rel="stylesheet"/>
   <link   href="../css/HistogramViewer.css"                                                     type="text/css"        rel="stylesheet"/>
  
-<!--
-  <script  src="/WebPath/extjsLib-6/build/ext-all-debug.js?theme=classic" 		        type="text/javascript"                  ></script>
+<!-- Use this link to debug Extjs 
+  <script  src="/WebPath/extjsLib-6/build/ext-all-debug.js?theme=classic" 		        type="text/javascript" ></script>
 -->
-  <script  src="/WebPath/extjsLib-6/build/examples/classic/shared/include-ext.js?theme=classic" type="text/javascript"		        ></script>
-  <!-- W A R N I N G: The JSROOT stuff must precede the Extjs one! -->
-  <script  src="../js/Debug.js"   			                                        type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot.js"   			                        type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/ViewerRootHud.js"   	                type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootCore.js?2d&hierarchy" type="text/javascript"                  ></script> 
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/d3.min.js"                  type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.js"           type="text/javascript"                  ></script>
-  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.hierarchy.js" type="text/javascript"                  ></script>
-  <script  src="../js/themeSelector.js"   			                                type="text/javascript"                  ></script>
 
-  <script  src="../js/STDLINE.js"   			                                        type="text/javascript"                  ></script>
-  <script  src="../js/Globals.js"   			                                        type="text/javascript"                  ></script>
-  <script  src="../js/DesktopContent.js"   			                                type="text/javascript"                  ></script>
-  <script  src="../js/navigatorTools.js"   			                                type="text/javascript"                  ></script>
-  <script  src="../js/complexLayout.js"   			                                type="text/javascript"                  ></script>
-  <script  src="../js/complexLayoutPersistency.js"   			                        type="text/javascript"                  ></script>
+  <script  src="/WebPath/extjsLib-6/build/examples/classic/shared/include-ext.js?theme=classic" type="text/javascript" ></script>
+  <script  src="../js/Debug.js"   			                                        type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot.js"   			                        type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/ViewerRootHud.js"   	                type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootCore.js?2d&hierarchy" type="text/javascript" ></script> 
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/d3.min.js"                  type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.js"           type="text/javascript" ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.hierarchy.js" type="text/javascript" ></script>
+  <script  src="../js/themeSelector.js"   			                                type="text/javascript" ></script>
+
+  <script  src="../js/STDLINE.js"   			                                        type="text/javascript" ></script>
+  <script  src="../js/Globals.js"   			                                        type="text/javascript" ></script>
+  <script  src="../js/DesktopContent.js"   			                                type="text/javascript" ></script>
+  <script  src="../js/navigatorTools.js"   			                                type="text/javascript" ></script>
+  <script  src="../js/complexLayout.js"   			                                type="text/javascript" ></script>
+  <script  src="../js/complexLayoutPersistency.js"   			                        type="text/javascript" ></script>
  </head>
 
  <body>
@@ -34,9 +59,7 @@
   <div id="east"    class="x-hide-display"></div>
   <div id="west"    class="x-hide-display"></div>
   <div id="center"  class="x-hide-display"></div>
-  <div id="south"   class="x-hide-display">
-      <p></p>
-  </div>
+  <div id="south"   class="x-hide-display"></div>
 
  </body>
 </html>
