Fixed deleted code bug

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -5706,7 +5706,9 @@
 					str += "</option>";
 				}
 				str += "</select>";
-				str += "</td>";"setupGroupCreator(\\\"" + preSelectStr + "\\\");"
+				str += "</td>";
+
+				backLinkStr = "setupGroupCreator(\\\"" + preSelectStr + "\\\");";				
 
 				str += "<td id='goto-" + name + "' >";
 				str += "<a onclick='" +
