--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -25,7 +25,7 @@
 			//functions:
 			//init()
 
-			var led;
+			var leds;
 			var labelContainers;
 			var pv_settings_;
 			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background_color": "transparent"};
